7th commit - Handling Multiple Data Providers

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse--481590174\testng-customsuite.xml</span>
+                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse-306193475\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})">testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.DataProviders" class="method navigator-link" hash-for-method="testData(janielle, password123)">testData(janielle, password123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})">testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})">testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})">testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.DataProviders" class="method navigator-link" hash-for-method="testData(jangreg, password321)">testData(jangreg, password321)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,39 +125,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">parameterization.TestNGParameterizationExcel</span>
+              <span class="class-name">parameterization.DataProviders</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})">
-                  </a> <!-- testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle}) -->
+                  <a name="testData(janielle, password123)">
+                  </a> <!-- testData(janielle, password123) -->
                   <span class="method-name">testData</span>
-                  <span class="parameters">({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</span>
+                  <span class="parameters">(janielle, password123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})">
-                  </a> <!-- testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg}) -->
+                  <a name="testData(jangreg, password321)">
+                  </a> <!-- testData(jangreg, password321) -->
                   <span class="method-name">testData</span>
-                  <span class="parameters">({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})">
-                  </a> <!-- testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn}) -->
-                  <span class="method-name">testData</span>
-                  <span class="parameters">({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})">
-                  </a> <!-- testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x}) -->
-                  <span class="method-name">testData</span>
-                  <span class="parameters">({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</span>
+                  <span class="parameters">(jangreg, password321)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse--481590174\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse-306193475\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;parameterization.TestNGParameterizationExcel&quot;/&gt;
+      &lt;class name=&quot;parameterization.DataProviders&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -224,28 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testData')
-data.setCell(0, 2, 'parameterization.TestNGParameterizationExcel')
-data.setCell(0, 3, 40);
+data.setCell(0, 2, 'parameterization.DataProviders')
+data.setCell(0, 3, 45);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testData')
-data.setCell(1, 2, 'parameterization.TestNGParameterizationExcel')
-data.setCell(1, 3, 20);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testData')
-data.setCell(2, 2, 'parameterization.TestNGParameterizationExcel')
-data.setCell(2, 3, 15);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testData')
-data.setCell(3, 2, 'parameterization.TestNGParameterizationExcel')
-data.setCell(3, 3, 4);
+data.setCell(1, 2, 'parameterization.DataProviders')
+data.setCell(1, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 79 ms</span>
+              <span class="suite-total-time">Total running time: 47 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,22 +237,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">parameterization.TestNGParameterizationExcel</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">parameterization.DataProviders</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</span>
+                <span class="method-name">testData(janielle, password123)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</span>
-                <span class="method-start">53 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</span>
-                <span class="method-start">78 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</span>
-                <span class="method-start">86 ms</span>
+                <span class="method-name">testData(jangreg, password321)</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
