--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">3,453</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">132</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">parameterization.TestNGParameterizationExcel</td><td><a href="#m0">testData</a></td><td rowspan="4">1594171225789</td><td rowspan="4">40</td></tr><tr class="passedeven"><td><a href="#m1">testData</a></td></tr><tr class="passedeven"><td><a href="#m2">testData</a></td></tr><tr class="passedeven"><td><a href="#m3">testData</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parameterization.DataProviders</td><td><a href="#m0">testData</a></td><td rowspan="2">1594188407523</td><td rowspan="2">45</td></tr><tr class="passedeven"><td><a href="#m1">testData</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">parameterization.DataProviders#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>janielle</td><td>password123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">parameterization.DataProviders#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>jangreg</td><td>password321</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
