--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse-212191029\testng-customsuite.xml</span>
+                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse-1283759399\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -112,12 +112,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.LoginTest" class="method navigator-link" hash-for-method="testUserReg(janielle, test1@outlook.com, test@gmail.com)">testUserReg(janielle, test1@outlook.com, test@gmail.com)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.LoginTest" class="method navigator-link" hash-for-method="testUserReg(janielle, gregorio, test@gmail.com)">testUserReg(janielle, gregorio, test@gmail.com)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.LoginTest" class="method navigator-link" hash-for-method="testUserReg(jangreg, jjsg, null)">testUserReg(jangreg, jjsg, null)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.LoginTest" class="method navigator-link" hash-for-method="testUserReg(jangreg, jjsg, test1@outlook.com)">testUserReg(jangreg, jjsg, test1@outlook.com)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -156,18 +156,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testUserReg(janielle, test1@outlook.com, test@gmail.com)">
-                  </a> <!-- testUserReg(janielle, test1@outlook.com, test@gmail.com) -->
+                  <a name="testUserReg(janielle, gregorio, test@gmail.com)">
+                  </a> <!-- testUserReg(janielle, gregorio, test@gmail.com) -->
                   <span class="method-name">testUserReg</span>
-                  <span class="parameters">(janielle, test1@outlook.com, test@gmail.com)</span>
+                  <span class="parameters">(janielle, gregorio, test@gmail.com)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testUserReg(jangreg, jjsg, null)">
-                  </a> <!-- testUserReg(jangreg, jjsg, null) -->
+                  <a name="testUserReg(jangreg, jjsg, test1@outlook.com)">
+                  </a> <!-- testUserReg(jangreg, jjsg, test1@outlook.com) -->
                   <span class="method-name">testUserReg</span>
-                  <span class="parameters">(jangreg, jjsg, null)</span>
+                  <span class="parameters">(jangreg, jjsg, test1@outlook.com)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse-212191029\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse-1283759399\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -228,24 +228,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testLogin')
 data.setCell(0, 2, 'parameterization.LoginTest')
-data.setCell(0, 3, 14);
+data.setCell(0, 3, 16);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testUserReg')
 data.setCell(1, 2, 'parameterization.LoginTest')
-data.setCell(1, 3, 5);
+data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testLogin')
 data.setCell(2, 2, 'parameterization.LoginTest')
-data.setCell(2, 3, 4);
+data.setCell(2, 3, 7);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testUserReg')
 data.setCell(3, 2, 'parameterization.LoginTest')
-data.setCell(3, 3, 4);
+data.setCell(3, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 ms</span>
+              <span class="suite-total-time">Total running time: 34 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -278,15 +278,15 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLogin(jangreg, password321)</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testUserReg(janielle, test1@outlook.com, test@gmail.com)</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-name">testUserReg(janielle, gregorio, test@gmail.com)</span>
+                <span class="method-start">74 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testUserReg(jangreg, jjsg, null)</span>
-                <span class="method-start">32 ms</span>
+                <span class="method-name">testUserReg(jangreg, jjsg, test1@outlook.com)</span>
+                <span class="method-start">79 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
