--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">145</td><td></td><td></td></tr>
+<tr><th colspan="7">Regression Suite</th></tr>
+<tr><td><a href="#t0">TestParametersFromXML Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">75</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">TestParametersFromXML2 Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">8</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">83</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">parameterization.LoginTest</td><td><a href="#m0">testLogin</a></td><td rowspan="2">1594194055438</td><td rowspan="2">16</td></tr><tr class="passedeven"><td><a href="#m1">testLogin</a></td></tr><tr class="passedeven"><td><a href="#m2">testUserReg</a></td><td rowspan="2">1594194055512</td><td rowspan="2">3</td></tr><tr class="passedeven"><td><a href="#m3">testUserReg</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestParametersFromXML Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parameterization.TestParametersFromXML</td><td><a href="#m0">getBrowser</a></td><td rowspan="1">1594203210855</td><td rowspan="1">24</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">TestParametersFromXML2 Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parameterization.TestParametersFromXML</td><td><a href="#m1">getBrowser</a></td><td rowspan="1">1594203211031</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">parameterization.LoginTest#testLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>janielle</td><td>password123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">parameterization.LoginTest#testLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>jangreg</td><td>password321</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">parameterization.LoginTest#testUserReg</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>janielle</td><td>gregorio</td><td>test@gmail.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">parameterization.LoginTest#testUserReg</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>jangreg</td><td>jjsg</td><td>test1@outlook.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestParametersFromXML Test</h2><h3 id="m0">parameterization.TestParametersFromXML#getBrowser</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>firefox</td><td>qa</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestParametersFromXML2 Test</h2><h3 id="m1">parameterization.TestParametersFromXML#getBrowser</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>chrome</td><td>uat</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
