8th commit - InvocationCount and ThreadPoolSize

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse-1989143573\testng-customsuite.xml</span>
+                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse--528998060\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -183,7 +183,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse-1989143573\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse--528998060\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -236,28 +236,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'executeTest')
 data.setCell(0, 2, 'parallelTest.TestInvocation')
-data.setCell(0, 3, 36);
+data.setCell(0, 3, 29378);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'executeTest')
 data.setCell(1, 2, 'parallelTest.TestInvocation')
-data.setCell(1, 3, 5);
+data.setCell(1, 3, 10667);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'executeTest')
 data.setCell(2, 2, 'parallelTest.TestInvocation')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 8847);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'executeTest')
 data.setCell(3, 2, 'parallelTest.TestInvocation')
-data.setCell(3, 3, 2);
+data.setCell(3, 3, 7400);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'executeTest')
 data.setCell(4, 2, 'parallelTest.TestInvocation')
-data.setCell(4, 3, 2);
+data.setCell(4, 3, 6799);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 ms</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -290,19 +290,19 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">executeTest</span>
-                <span class="method-start">40 ms</span>
+                <span class="method-start">29381 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">executeTest</span>
-                <span class="method-start">47 ms</span>
+                <span class="method-start">38232 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">executeTest</span>
-                <span class="method-start">51 ms</span>
+                <span class="method-start">45632 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">executeTest</span>
-                <span class="method-start">54 ms</span>
+                <span class="method-start">52435 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
