28th commit - OnTestFailure - CaptureScreenshots

--- a/test-output/old/TestNG Listeners/methods.html
+++ b/test-output/old/TestNG Listeners/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestNG Listeners</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ddbd7e">  <td>20/07/12 16:22:17</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>20/07/12 16:22:38</td>   <td>20524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">doLogin</td> 
-  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="ddbd7e">  <td>20/07/12 16:22:53</td>   <td>35595</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>20/07/12 16:56:20</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="9aafa1">  <td>20/07/12 16:56:32</td>   <td>12381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.composeEmail()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">composeEmail</td> 
+  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="9aafa1">  <td>20/07/12 16:56:33</td>   <td>13129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">doLogin</td> 
+  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>20/07/12 16:56:46</td>   <td>26646</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
 </table>
